hphp/hack/test/pocket_universes/typing/decl1.bad.php.exp
File "decl1.bad.php", line 11, characters 16-16:
Unbound name: `U` (Naming[2049])
